reworked the spacing issue and added in meta tag for the favicon

--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -464,9 +464,6 @@ body {
       #faq, #resources, #terms, #resources_faq {
         width: 460px;
         float: left;
-        p {
-          margin-top: 15px;
-        }
         ul {
           padding: 15px 40px 10px 50px;
           li {
@@ -475,7 +472,6 @@ body {
           }
         }
         dl {
-          margin: 15px 0 0 0;
           dt {
            font-weight: bold;
           -webkit-font-smoothing: antialiased;
@@ -488,6 +484,9 @@ body {
             font-weight: normal;
             line-height: 1.5em;
             padding: 0 0 25px 0;
+            p {
+              margin: 0;
+            }
             &:last-child {
               padding: 0
             }
@@ -500,6 +499,7 @@ body {
          border-bottom: 1px solid #000;
          padding: 0 0 10px 0;
          @include shadow(0,1px,0,rgba(255,255,255,.12));
+         margin-bottom: 15px;
         }
       }
       h4#why-we-rule {
